# rclone-manager

./: .gitignore  LICENSE  README.md  config.ini.example  helper_funcs.py  pyproject.toml  rclone_manager.py  requirements.txt  run_backup.py  run_webdav.py
codes/: config.json  config.py  configs.py  download_backup.py  main.py  manage_config.py  manage_webdav_config.py  rclone_serve.py  run_backup.py  serve_local.py  serve_remote.py  upload_backup.py  utils.py
data/: config.json
rclone/: configs.py  helper_funcs.py  helpers.py  main.py  manage_webdav_config.py  remote-commands-config.json  run_backup.py  run_webdav.py
rclone_scripts/: cli.py  config.py  configs.py  core.py  utils.py
src/rclone_manager/: cli.py  config.py  core.py  mount.py  utils.py  webui.py  webui_launcher.py
src/rclone_scripts/: config.py
